# ko-poetry-audit-plugin

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: check.yml  codeql.yml  ossar.yml  release.yml
src/ko_poetry_audit_plugin/: __init__.py  auditor.py  command.py  packages.py  plugins.py  pypi_warehouse.py  vulnerabilities.py
tests/: conftest.py  test_vulnerabilities.py
tests/data/: django_3.0.2.txt  no_such_package_1.0.0.txt  sampleproject_1.2.0.txt
tests/pypi_warehouse/: conftest.py  test_get_packages_metadata.py  test_get_vulnerable_packages.py
